--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "node_modules/.bin/nodemon ./bin/www"
+    "watch": "node_modules/.bin/nodemon ./bin/www",
+    "test": "jest --watch"
   },
   "author": "Ville Oravilkka",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^29.6.4",
     "moment": "^2.29.4",
     "morgan": "~1.9.1"
   },
